--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ city: Redwood City
 state: CA
 zip_code: 94063
 country: United States of America
-phone: (123) 555-5555
+phone: (123) 456-7890
 
 # homepage tiles
 tiles-source: pages # accepts "posts" or "pages"
@@ -22,7 +22,7 @@ tiles-count: 6
 # Icons are not shown if value is empty
 # You need to restart jekyll for changes to have an effect
 socials:
- GitHub: https://github.com/sabj
+#  GitHub: https://github.com/sabj
  GitLab:
  Google-Plus: 
  Instagram:
@@ -35,6 +35,10 @@ markdown: kramdown
 
 sass:
   style: compressed
+
+
+include:
+- content
 
 exclude:
 - "*.gemspec"
